<resources>
    <string name="app_name">HappyBank</string>
    <string name="main_title_label">Happy Bank</string>
    <string name="main_deposit_button_label">Daily Deposit</string>
    <string name="main_withdraw_button_label">Random Withdrawal</string>
    <string name="main_settings_button_label">Account Settings</string>
    <string name="deposit_title_label">Write down 3 things that\nyou were grateful for today</string>
    <string name="withdraw_title_label">Here is one thing that\nyou have been grateful for</string>
    <string name="submit_button_label">Submit</string>
    <string name="withdrawal_default_label">You have not yet deposited anything into your Happy Bank.</string>
    <string name="back_button_label">Back</string>
    <string name="settings_title_label">Account Settings</string>
    <string name="bedtime_title_label">Bedtime</string>
    <string name="name_title_label">Name</string>
    <string name="deposit_count_label">Deposit count:</string>
    <string name="setting_save_label">Save</string>
    <string name="default_name">Friend</string>
    <string name="default_bedtime">22:00</string>
    <string name="deposit_not_message">Time for bed. What are you grateful for today?</string>
    <string name="channel_name">HappyBank</string>
    <string name="channel_description">Channel for reminder notifications</string>
    <string name="deposit_not_title">Daily Deposit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preferences_filename">SETTINGS</string>
    <string name="about_title_label">About Happy Bank</string>
    <string name="subtitle_label">Happy Bank is a place to collect, store and revisit things that you are grateful for in your life.</string>
    <string name="about_deposit_title_label">Daily Deposit</string>
    <string name="about_deposit_label">At the end of each day write down 3 things that you were grateful for during the day. It might be something that happened, it might be someone you met, or it might be something you thought about. Reflecting back on the good things in your day helps you to realise the positive things in your life and to have them in your mind as you end your day.</string>
    <string name="about_withdrawal_title_label">Random Withdrawal</string>
    <string name="about_withdrawal_label">If you are ever feeling down, or you just feel like revisiting happy memories, you can make a random withdrawal from your Happy Bank to be reminded of something you were grateful for in the past. In the settings menu you can change the randomisation method to favour more recent deposits or not.</string>
    <string name="about_notification_label">Happy Bank will remind you to make a daily deposit by sending a notification at your chosen \"bedtime\". This can be set in the settings menu. You can also choose for Happy Bank to give you Random Withdrawal notifications.</string>
    <string name="about_notification_title_label">Notifications</string>
    <string name="main_about_button_label">About</string>
    <string name="randomisation_title_label">Favour recent\nwithdrawals</string>
</resources>
