<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aboutTitle"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_title_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"/>

        <ImageView
            android:id="@+id/mainIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/pig_icon" />

        <TextView
            android:id="@+id/aboutSubtitleText"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/subtitle_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutDepositTitle"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/about_deposit_title_label"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorButton"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutDepositText"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_deposit_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutWithdrawalTitle"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/about_withdrawal_title_label"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorButton"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutWithdrawalText"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_withdrawal_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutNotificationTitle"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/about_notification_title_label"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorButton"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/aboutNotificationText"
            style="@style/CasualFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_notification_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <Button
            style="@style/CasualFont"
            android:id="@+id/aboutBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/colorButton"
            android:text="@string/back_button_label"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>