<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsTitle"
        style="@style/CasualFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/settings_title_label"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <TableLayout
        android:id="@+id/settingsTableLayout"
        android:layout_width="305dp"
        android:layout_height="476dp"
        android:layout_gravity="center"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTitle"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/nameEditText"
                style="@style/CasualFont"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/bedtimeTitle"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bedtime_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/bedtimeEditText"
                style="@style/CasualFont"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="showTimePickerDialog"
                android:text="@string/default_bedtime" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/randomisationTitle"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/randomisation_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <Switch
                android:id="@+id/randomisationSwitch"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:showText="false" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">


            <Button
                android:id="@+id/settingsSaveButton"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:text="@string/setting_save_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/depositCountTitle"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/deposit_count_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/depositCountNumber"
                style="@style/CasualFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="10"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

</LinearLayout>